[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Peng Chen <pchen0816@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
bs4 = "^0.0.1"
pysnooper = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
